--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "compile:sass": "node-sass sass/main.scss css/styles.css -w"
   },
   "repository": {
     "type": "git",
@@ -26,5 +26,8 @@
   "bugs": {
     "url": "https://github.com/techaacees/Natours/issues"
   },
-  "homepage": "https://github.com/techaacees/Natours#readme"
+  "homepage": "https://github.com/techaacees/Natours#readme",
+  "dependencies": {
+    "node-sass": "^4.14.1"
+  }
 }
